--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "cakephp/cakephp-codesniffer": "^3.0",
         "cakephp/debug_kit": "^3.17.0",
         "josegonzalez/dotenv": "3.*",
+        "phpstan/phpstan": "^0.11.0",
         "phpunit/phpunit": "^5|^6",
         "psy/psysh": "@stable"
     },
