--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,18 @@
     "require": {
         "php": ">=5.6",
         "cakephp/cakephp": "3.7.*",
-        "cakephp/migrations": "^2.0.0",
-        "cakephp/plugin-installer": "^1.0",
         "mobiledetect/mobiledetectlib": "2.*",
         "smottt/wideimage": "^1.1"
     },
     "require-dev": {
         "cakephp/bake": "^1.9.0",
+        "cakephp/migrations": "^2.0.0",
+        "cakephp/plugin-installer": "^1.0",
         "cakephp/cakephp-codesniffer": "^3.0",
         "cakephp/debug_kit": "^3.17.0",
         "josegonzalez/dotenv": "3.*",
         "phpstan/phpstan": "^0.11.0",
-        "phpunit/phpunit": "^5|^6",
-        "psy/psysh": "@stable"
+        "phpunit/phpunit": "^5|^6"
     },
     "suggest": {
         "markstory/asset_compress": "An asset compression plugin which provides file concatenation and a flexible filter system for preprocessing and minification.",
