--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,14 @@
     },
     "require-dev": {
         "cakephp/bake": "^1.9.0",
-        "cakephp/migrations": "^2.0.0",
-        "cakephp/plugin-installer": "^1.0",
         "cakephp/cakephp-codesniffer": "^3.0",
         "cakephp/debug_kit": "^3.17.0",
+        "cakephp/migrations": "^2.0.0",
+        "cakephp/plugin-installer": "^1.0",
         "josegonzalez/dotenv": "3.*",
         "phpstan/phpstan": "^0.11.0",
-        "phpunit/phpunit": "^5|^6"
+        "phpunit/phpunit": "^5|^6",
+        "psy/psysh": "^0.9.9"
     },
     "suggest": {
         "markstory/asset_compress": "An asset compression plugin which provides file concatenation and a flexible filter system for preprocessing and minification.",
