--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "require": {
         "php": ">=5.6",
         "cakephp/cakephp": "3.7.*",
-        "mobiledetect/mobiledetectlib": "2.*",
-        "smottt/wideimage": "^1.1"
+        "malamalca/wideimage": "^1.1"
     },
     "require-dev": {
         "cakephp/bake": "^1.9.0",
@@ -16,6 +15,7 @@
         "cakephp/debug_kit": "^3.17.0",
         "cakephp/migrations": "^2.0.0",
         "cakephp/plugin-installer": "^1.0",
+        "mobiledetect/mobiledetectlib": "2.*",
         "josegonzalez/dotenv": "3.*",
         "phpstan/phpstan": "^0.11.0",
         "phpunit/phpunit": "^5|^6",
