--- a/composer.json
+++ b/composer.json
@@ -41,10 +41,12 @@
         "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump",
         "check": [
             "@test",
-            "@cs-check"
+            "@cs-check",
+            "@phpstan"
         ],
         "cs-check": "phpcs --colors -p --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/",
         "cs-fix": "phpcbf --colors --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/",
+        "phpstan": "phpstan analyze -l 5 src",
         "test": "phpunit --colors=always"
     },
     "prefer-stable": true,
