--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6",
         "cakephp/cakephp": "3.7.*",
+        "malamalca/php-gedcom": "^1.0",
         "malamalca/wideimage": "^1.1.6"
     },
     "require-dev": {
