--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
 language: php
 
-dist: trusty
-
-sudo: false
-
 php:
   - 5.6
-  - 7.0
-  - 7.1
-  - 7.2
+  - 7.3
+  - 7.4snapshot
 
 matrix:
   fast_finish: true
@@ -24,16 +19,14 @@ matrix:
       env: PHPSTAN=1 DEFAULT=0
 
 before_script:
-  - if [[ $PHPCS = 1 ]]; then composer require cakephp/cakephp-codesniffer:"^3.0"; fi
-  - if [[ $DEFAULT = 1 ]]; then composer install; fi
-  - if [[ $DEFAULT = 1 ]]; then composer require phpunit/phpunit:"^5.7|^6.0"; fi
+  - if [[ $DEFAULT = 1 || $PHPCS = 1 ]]; then composer install; fi
   - if [[ $DEFAULT = 1 ]]; then composer run-script post-install-cmd --no-interaction; fi
-  - if [[ $PHPSTAN = 1 ]]; then composer require --dev "phpstan/phpstan"; fi
+  - if [[ $PHPSTAN = 1 ]]; then composer require --dev "phpstan/phpstan-shim"; fi
 
 script:
   - if [[ $DEFAULT = 1 ]]; then vendor/bin/phpunit; fi
-  - if [[ $PHPCS = 1 ]]; then vendor/bin/phpcs -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests ./webroot; fi
-  - if [[ $PHPSTAN = 1 ]]; then vendor/bin/phpstan analyse -l 5 src; fi
+  - if [[ $PHPCS = 1 ]]; then vendor/bin/phpcs -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/ config/ webroot/; fi
+  - if [[ $PHPSTAN = 1 ]]; then vendor/bin/phpstan analyse -l 5 src/; fi
 
 notifications:
   email: false
